client.js, index.html: enable twitter/identi.ca

--- a/www/index.html
+++ b/www/index.html
@@ -41,23 +41,21 @@
 	<input type='text' id='feed_url' title='URL of ATOM/RSS feed'/>
 	<input type='button' id='feed_add' value='Add'/>
       </div>
-      <!--
       <div>
 	<label>Twitter user:</label>
-	<input type='text' title='Username'/>
-	<input type='button' value='Add'/>
+	<input type='text' id='twitter_user' title='Username'/>
+	<input type='button' id='twitter_add' value='Add'/>
       </div>
       <div>
 	<label>identi.ca user:</label>
-	<input type='text' title='Username'/>
-	<input type='button' value='Add'/>
+	<input type='text' id='identica_user' title='Username'/>
+	<input type='button' id='identica_add' value='Add'/>
       </div>
       <div>
-	<label>Twitter/identi.ca search:</label>
-	<input type='text' title='Search word'/>
-	<input type='button' value='Add'/>
+	<label>Twitter/identi.ca tag:</label>
+	<input type='text' id='search_text' title='Search tag'/>
+	<input type='button' id='search_add' value='Add'/>
       </div>
-      -->
       <div>
 	<input type='button' id='addcancel' value='Cancel'/>
       </div>
